// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate snapshots Subheading: 0 1`] = `
<h3
  className="typography-0-1-8 typography__3-0-1-11 subheading-0-1-1 subheading__1-0-1-2"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 1 1`] = `
<h1
  className="typography-0-1-25 typography__3-0-1-28 subheading-0-1-18 subheading__1-0-1-19"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 2 1`] = `
<h1
  className="typography-0-1-42 typography__3-0-1-45 subheading-0-1-35 subheading__1-0-1-36"
  data-sketch-symbol="Subheading 1"
>
  Subheading test string
</h1>
`;

exports[`generate snapshots Subheading: 3 1`] = `
<h2
  className="typography-0-1-59 typography__4-0-1-63 subheading-0-1-52 subheading__2-0-1-54"
  data-sketch-symbol="Subheading 2"
>
  Subheading test string
</h2>
`;

exports[`generate snapshots Subheading: 4 1`] = `
<h3
  className="typography-0-1-76 typography__5-0-1-81 subheading-0-1-69 subheading__3-0-1-72"
  data-sketch-symbol="Subheading 3"
>
  Subheading test string
</h3>
`;

exports[`generate snapshots Subheading: 5 1`] = `
<h4
  className="typography-0-1-93 typography__6-0-1-99 subheading-0-1-86 subheading__4-0-1-90"
  data-sketch-symbol="Subheading 4"
>
  Subheading test string
</h4>
`;

exports[`generate snapshots Subheading: 6 1`] = `
<h5
  className="typography-0-1-110 typography__7-0-1-117 subheading-0-1-103 subheading__5-0-1-108"
  data-sketch-symbol="Subheading 5"
>
  Subheading test string
</h5>
`;

exports[`generate snapshots Subheading: 7 1`] = `
<h6
  className="typography-0-1-127 typography__8-0-1-135 subheading-0-1-120 subheading__6-0-1-126"
  data-sketch-symbol="Subheading 6"
>
  Subheading test string
</h6>
`;
